@@ -1,0 +1,1 @@
+Primary Name,Secondary Name,Datum,Anzahl,Standort,Latitude,Longitude,Anmerkungen
