@@ -18,6 +18,7 @@ IMPORTANT: As per Semantic Versioning, the major version zero is for initial dev
 
 === Fixed
 
+- Do not abort report creation if species lists are empty (assume default columns for the AsciiDoc output).
 - Fix search of public transport stations if distance is missing (e.g. if the coordinates are outside of Switzerland).
 
 == 0.11.0 - 2023-04-15
